feat: header created

--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
      <link rel="stylesheet" href="style.css">
     <!-- /Inserimento pagina di stile -->
 </head>
-<body>
+
+<body class="container">
+    <!-- Intestazione della pagina -->
+    <header>
+        <div class="box-1"><span>Logo</span></div>
+        <div id="menù-centrale"><nav>link link link link</nav></div>
+        <div class="box-1"><span id="login">Login</span></div>
+    </header>
+    <!-- /Intestazione della pagina -->
     
+    <!-- Corpo della pagina -->
+    <main></main>
+    <!-- /Corpo della pagina -->
+    
+    <!-- Piede di pagina -->
+    <footer></footer>
+    <!-- /Piede di pagina -->
 </body>
 </html>
