feat: 1rst section added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
     <!-- /Intestazione della pagina -->
     
     <!-- Corpo della pagina -->
-    <main></main>
+    <main>
+        <section id="sec-1"><div></div></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
     <!-- /Corpo della pagina -->
     
     <!-- Piede di pagina -->
