feat: 2nd section added

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!-- /Inserimento pagina di stile -->
 </head>
 
-<body class="container">
+<body>
     <!-- Intestazione della pagina -->
-    <header>
+    <header  class="container">
         <div class="box-1"><span>Logo</span></div>
         <div id="menù-centrale"><nav>link link link link</nav></div>
         <div class="box-1"><span id="login">Login</span></div>
@@ -20,9 +20,12 @@
     <!-- /Intestazione della pagina -->
     
     <!-- Corpo della pagina -->
-    <main>
+    <main class="container">
         <section id="sec-1"><div></div></section>
-        <section></section>
+        <section class="blocco2">
+            <div class="blu"></div>
+            <div class="rosa"></div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
