feat: footer added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
     <!-- /Corpo della pagina -->
     
     <!-- Piede di pagina -->
-    <footer></footer>
+    <footer>
+        <div class="piede-pagina">
+            <div>Logo</div>
+            <div>Bottone</div>
+        </div>
+    </footer>
     <!-- /Piede di pagina -->
 </body>
 </html>
