feat: sistemazione header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Struttura Discord</title>
 
     <!-- Inserimento pagina di stile -->
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="css/style.css">
     <!-- /Inserimento pagina di stile -->
 </head>
 
